<resources>
    <string name="app_name" translatable="false">NMedia</string>
    <string name="menu">menu</string>
    <string name="like">Description_like</string>
    <string name="repost">Description_repost</string>
    <string name="view">Description_view</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">text_Post</string>
    <string name="error_empty_content">content_cannot_be_empty</string>
    <string name="save">Description_save</string>
    <string name="menu_edit">Edit</string>
    <string name="input">Description_input</string>
    <string name="backup">Description_backup</string>
    <string name="edit_message">Edit_Message</string>
    <string name="chooser_share_post">Edit_chooser</string>
    <string name="title_activity_new_post_result_contract">NewPostResultContract</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_intent_handler">IntentHandlerActivity</string>

</resources>