<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_padding">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_netology_48" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:checkable="true"
        android:contentDescription="@string/menu"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:maxHeight="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        app:icon="@drawable/ic_menu_48"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:shapeAppearance="@null"
        app:srcCompat="@drawable/ic_menu_48" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar"
        />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding"
        app:layout_constraintBottom_toTopOf="@id/onVideoButton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrier_top"
        tools:text="gogogogogogo" />

    <Button
        android:id="@+id/onVideoButton"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:contentDescription="@string/like"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:maxHeight="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:visibility="invisible"
        app:icon="@drawable/ic_video_24"
        app:layout_constraintEnd_toStartOf="@id/onVideoButton1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content"
         tools:visibility="visible"/>

    <ImageButton
        android:id="@+id/onVideoButton1"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:src="@drawable/videoImage"
        android:visibility="invisible"
        android:contentDescription="@string/like"
        app:layout_constraintStart_toEndOf="@id/onVideoButton"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:layout_constraintBottom_toTopOf="@id/barrier_top1"
        tools:visibility="visible"
         />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_top1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="onVideoButton1"
        app:layout_constraintTop_toBottomOf="@id/onVideoButton1"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/onLike"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:contentDescription="@string/like"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:maxHeight="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        app:icon="@drawable/ic_like_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_top1"
        app:shapeAppearance="@null" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/onShare"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/repost"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:maxHeight="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        app:icon="@drawable/ic_share_48"
        app:layout_constraintStart_toEndOf="@id/onLike"
        app:layout_constraintTop_toBottomOf="@id/barrier_top1"
        app:shapeAppearance="@null" />


    <TextView
        android:id="@+id/view_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_top1" />

    <ImageButton
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/view"
        app:layout_constraintEnd_toStartOf="@id/view_count"
        app:layout_constraintTop_toBottomOf="@id/barrier_top1"
        app:srcCompat="@drawable/ic_view_48" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>